--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Liga Spanyol</title>
+    <link rel="canonical" href="https://ahmadjaini7.github.io/laligas.github.io/" />
+   
+    https://ahmadjaini7.github.io/laligas.github.io/
     <!-- create web app manifest -->
 
     <link rel="manifest" href="./manifest.json">
