--- a/team.html
+++ b/team.html
@@ -54,7 +54,8 @@
     <script type="text/javascript" src="./js/materialize.min.js"></script>
     <script src="./js/api.js"></script>
     <script src="./js/idb.js"></script>
-    <script src="/js/db.js"></script>
+    <script src="./js/db.js"></script>
+    <script src="https://ahmadjaini7.github.io/laligas.github.io/js/db.js"></script>
     <script src="./swcon.js"></script>
     <script>
         // Request API
